--- a/package.json
+++ b/package.json
@@ -1,46 +1,46 @@
 {
-	"name": "typed-pocketbase",
-	"version": "0.1.0",
-	"description": "Add types to the PocketBase JavaScript SDK",
-	"author": "David Plugge",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/david-plugge/typed-pocketbase"
-	},
-	"license": "MIT",
-	"keywords": [
-		"pocketbase",
-		"types"
-	],
-	"files": [
-		"dist",
-		"src"
-	],
-	"type": "module",
-	"module": "./dist/client/index.js",
-	"types": "./dist/client/index.d.ts",
-	"bin": {
-		"typed-pocketbase": "dist/codegen/cli.js"
-	},
-	"scripts": {
-		"build": "tsup",
-		"lint": "tsc",
-		"format": "prettier --write .",
-		"ci:version": "changeset version",
-		"ci:release": "changeset publish"
-	},
-	"peerDependencies": {
-		"pocketbase": "^0.21.0"
-	},
-	"dependencies": {
-		"sade": "^1.8.1"
-	},
-	"devDependencies": {
-		"@changesets/cli": "^2.27.1",
-		"@types/node": "^20.11.13",
-		"pocketbase": "^0.21.0",
-		"prettier": "^3.2.4",
-		"tsup": "^8.0.1",
-		"typescript": "^5.3.3"
-	}
+  "name": "@fakerepic/typed-pocketbase",
+  "version": "0.1.0",
+  "description": "Add types to the PocketBase JavaScript SDK",
+  "author": "David Plugge",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/fakerepic/typed-pocketbase"
+  },
+  "license": "MIT",
+  "keywords": [
+    "pocketbase",
+    "types"
+  ],
+  "files": [
+    "dist",
+    "src"
+  ],
+  "type": "module",
+  "module": "./dist/client/index.js",
+  "types": "./dist/client/index.d.ts",
+  "bin": {
+    "typed-pocketbase": "dist/codegen/cli.js"
+  },
+  "scripts": {
+    "build": "tsup",
+    "lint": "tsc",
+    "format": "prettier --write .",
+    "ci:version": "changeset version",
+    "ci:release": "changeset publish"
+  },
+  "peerDependencies": {
+    "pocketbase": "^0.21.0"
+  },
+  "dependencies": {
+    "sade": "^1.8.1"
+  },
+  "devDependencies": {
+    "@changesets/cli": "^2.27.1",
+    "@types/node": "^20.11.13",
+    "pocketbase": "^0.21.0",
+    "prettier": "^3.2.4",
+    "tsup": "^8.0.1",
+    "typescript": "^5.3.3"
+  }
 }
